--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-#start {
-    color: aquamarine;
+*{
+    background-color: black;
+    font-family: "Rubik", sans-serif;
+}
+#nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* border: 1px solid blue; */
+    padding: 30px 0px;
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.navBtn {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 21px;
+    margin-right: 30px;
+}
+
+#cvBtn {
+    color: #FFFFFF;
+    font-size: 21px;
+    background-color: #FD6F00;
+    border: 1px solid#FD6F00;
+    padding: 10px;
 }
