--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 *{
-    background-color: black;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #121212;
     font-family: "Rubik", sans-serif;
 }
 #nav {
@@ -13,7 +16,7 @@
     margin-right: auto;
 }
 
-.navBtn {
+.aBtn {
     text-decoration: none;
     color: #FFFFFF;
     font-size: 21px;
@@ -26,4 +29,40 @@
     background-color: #FD6F00;
     border: 1px solid#FD6F00;
     padding: 10px;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+    /* border: 1px solid blue; */
+    padding-top: 60px;
+    background-color: #000000;
+}
+
+#footerBtns {
+    background-color: #000000;
+}
+
+#footerBtns a{
+    background-color: #000000;
+}
+
+#socialIcons {
+    display: flex;
+    gap: 30px;
+    background-color: #000000;
+}
+
+#socialIcons img {
+    background-color: #000000;
+}
+
+#copyRights {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
 }
