--- a/style.css
+++ b/style.css
@@ -2,29 +2,32 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    color: #FFFFFF;
     background-color: #121212;
     font-family: "Rubik", sans-serif;
 }
+
+.container{
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 #nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     /* border: 1px solid blue; */
     padding: 30px 0px;
-    max-width: 80%;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 .aBtn {
     text-decoration: none;
-    color: #FFFFFF;
     font-size: 21px;
     margin-right: 30px;
 }
 
 #cvBtn {
-    color: #FFFFFF;
     font-size: 21px;
     background-color: #FD6F00;
     border: 1px solid#FD6F00;
@@ -65,4 +68,56 @@ footer {
     padding: 20px;
     display: flex;
     justify-content: center;
+}
+
+#awardSection{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+
+.secSub {
+    font-size: 18px;
+    max-width: 500px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 10px;
+    margin-bottom: 45px;
+}
+
+.award-card {
+    background-color: #000000;
+    padding: 40px;
+    /* border: 1px solid blue; */
+    margin-bottom: 30px;
+}
+
+.award-heading {
+    font-size: 24px; 
+    margin-bottom: 15px;
+    background-color: #000000;
+}
+
+.award-title {
+    font-size: 18px;
+    font-weight: 700;
+    background-color: #000000;
+}
+
+.award-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #000000;
+}
+
+.award-desc {
+    font-size: 18px;
+    line-height: 28px;
+    color: rgba(255, 255, 255, 0.5);
+    max-width: 70%;
+    background-color: #000000;
 }
