--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
     color: #FFFFFF;
-    background-color: #121212;
+    box-sizing: border-box;
     font-family: "Rubik", sans-serif;
+}
+
+body {
+    background-color: #121212;
 }
 
 .container{
@@ -170,4 +173,32 @@ footer {
     align-items: center;
     gap: 30px;
     margin-bottom: 40px;
+}
+
+#contact-section {
+    background-color: rgba(253, 111, 0, 0.1);
+    padding: 80px 120px;
+}
+
+#contact-heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.two-col {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+    margin-bottom: 40px;
+}
+
+#submit-btn {
+    background-color: #FD6F00;
+    padding: 10px;
+    max-width: 140px;
+    text-align: center;
+    margin-top: 40px;
+    margin-bottom: 50px;
 }
