--- a/style.css
+++ b/style.css
@@ -170,14 +170,16 @@ footer {
 
 .project-card {
     display: flex;
+    width: 100%;
+    justify-content: space-around;
     align-items: center;
-    gap: 30px;
     margin-bottom: 40px;
 }
 
 #contact-section {
     background-color: rgba(253, 111, 0, 0.1);
     padding: 80px 120px;
+    margin-bottom: 100px;
 }
 
 #contact-heading {
@@ -200,5 +202,4 @@ footer {
     max-width: 140px;
     text-align: center;
     margin-top: 40px;
-    margin-bottom: 50px;
 }
