--- a/style.css
+++ b/style.css
@@ -194,6 +194,9 @@ footer {
 
 #portfolio-tabs {
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     gap: 40px;
     margin-bottom: 40px;
 }
@@ -372,6 +375,14 @@ footer {
         width: 350.87px;
         height: 360.87px;
         border-radius: 360.87px;
+    }
+
+    /* portfolio section */
+    .project-card {
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-bottom: 40px;
     }
 
 }
