--- a/style.css
+++ b/style.css
@@ -20,8 +20,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 1px solid blue; */
     padding: 30px 0px;
+}
+
+#nav-links {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .aBtn {
@@ -385,6 +391,15 @@ footer {
         margin-bottom: 40px;
     }
 
+    /* navbar */
+    #nav {
+        flex-direction: column;
+        padding: 20px 0px;
+    }
+    
+    #nav-links {
+        margin-top: 20px;
+    }
 }
 
 
